populated all frogs

--- a/localization/sapopon - localization - sapos.csv
+++ b/localization/sapopon - localization - sapos.csv
@@ -4,7 +4,7 @@ frog_demon,Sapánas,
 frog_future,Rãndroid,
 frog_medieval,Sapo Bocudo,
 frog_pieta,Pieta,
-frog_cheese,Sapo Queijo,
+frog_cheese,Sapão de Queijo,
 frog_jfrog,sapo.jpeg,
 frog_chad,Chaderson,
 frog_hfroger,HFROGGER,
@@ -17,7 +17,7 @@ frog_low_poly,Sapo Lowpoly,
 frog_sapone,Al Sapone,
 frog_lips,Sapo Bicudo,
 frog_vga,Sapo VGA,
-frog_french,Sapoleão Bonparte,
+frog_french,Sapoleão Bonaparte,
 frog_war,Sapo Guerreiro,
 frog_rogue,Sapo Ladino,
 frog_alien,Sapalien,
