--- a/localization/sapopon - localization - ui.csv
+++ b/localization/sapopon - localization - ui.csv
@@ -10,7 +10,7 @@ manual,Manual,
 back,Voltar,
 next_day,Prox. Dia,
 day,Dia %s,
-gacha,Gachapon,
+gacha,Sapopon,
 your_coins,Você tem %s moedas,
 got_new_frog,Você conseguiu um novo sapo!,
 collection,Coleção,
