--- a/localization/sapopon - localization - propriedades.csv
+++ b/localization/sapopon - localization - propriedades.csv
@@ -1,11 +1,11 @@
 key,pt,en
-LUCKY,Sortudo,
-HARD,Difícil Descrever,
-STYLISH,Estiloso,
-ADVENTURE,Aventura,
-MYSTIC,De Natureza Mística,
-MATERIALS,Materiais,
-commom,Comum,
-incommon,Incomum,
-rare,Raro,
-unique,Unico,
+LUCKY,Sortudo,Eudaemonia
+HARD,Difícil Descrever,Ineffable
+STYLISH,Estiloso,Halcyon
+ADVENTURE,Aventura,Odeliac
+MYSTIC,De Natureza Mística,Syzygy
+MATERIALS,Materiais,Materials
+commom,Comum,Common
+incommon,Incomum,Incommon
+rare,Raro,Rare
+unique,Unico,Unique
