--- a/localization/sapopon - localization - sapos.csv
+++ b/localization/sapopon - localization - sapos.csv
@@ -1,35 +1,37 @@
 key,pt,en
-frog_angel,Sapo Bíblico,
-frog_demon,Sapánas,
-frog_future,Rãndroid,
-frog_medieval,Sapo Bocudo,
-frog_pieta,Pieta,
-frog_cheese,Sapão de Queijo,
-frog_jfrog,sapo.jpeg,
-frog_chad,Chaderson,
-frog_hfroger,HFROGGER,
-frog_gnome,Sapo Gnomo,
-frog_autism,Rãutismo,
-frog_paradox,Sapo Paradoxo,
-frog_tan,Sapo Bronzeado,
-frog_ladybug,Saponinha,
-frog_low_poly,Sapo Lowpoly,
-frog_sapone,Al Sapone,
-frog_lips,Sapo Bicudo,
-frog_vga,Sapo VGA,
-frog_french,Sapoleão Bonaparte,
-frog_war,Sapo Guerreiro,
-frog_rogue,Sapo Ladino,
-frog_alien,Sapalien,
-frog_space,Sapastronauta,
-frog_primitive,Neandersapiens,
-frog_mage,Sapo Mago,
-frog_greek,Sapócrates,
-frog_atom,Sapo Atômico,
-frog_sound,Sapo de Som,
-frog_bread,Sapão,
-frog_grof,SapoopaS,
-frog_anime,Kawaii Kero,
-frog_abstract,Sapo Abstrato,
-frog_pipa_l,Sapo Pipa Liso,
-frog_pipa_f,Sapo Pipa Furado,
+frog_angel,Sapo Bíblico,Biblical Frog
+frog_demon,Sapánas,Frog Satan
+frog_future,Rãndroid,Toadroid
+frog_medieval,Sapo Medieval,Medieval Frog
+frog_pieta,Pietà,Pietà
+frog_cheese,Sapão de Queijo,Cheese Toad
+frog_jfrog,sapo.jpeg,frog.jpeg
+frog_chad,Chaderson,Chaderson
+frog_hfroger,HFROGGER,HFROGGER
+frog_gnome,Sapo Gnomo,Gnome Frog
+frog_autism,Rãutismo,Autoadsm
+frog_paradox,Sapo Paradoxo,Paradox Frog
+frog_tan,Sapo Bronzeado,Tan Line Frog
+frog_ladybug,Saponinha,Ladyfrog
+frog_low_poly,Sapo Lowpoly,Lowpoly Frog
+frog_sapone,Al Sapone,Al Sapone
+frog_lips,Sapo Bicudo,Kissing Toad
+frog_vga,Sapo VGA,VGA Frog
+frog_french,Sapoleão Bonaparte,Nopoleon Bonafrog
+frog_war,Sapo Guerreiro,Warrior Frog
+frog_rogue,Sapo Ladino,Rogue Frog
+frog_alien,Sapalien,Toadalien
+frog_space,Sapastronauta,Astronaufrog
+frog_primitive,Neandersapiens,Neanderfrogiens
+frog_mage,Sapo Mago,Mage Frog
+frog_greek,Sapócrates,Frogrates
+frog_atom,Sapo Atômico,Arom Frog
+frog_sound,Sapo de Som,Boom Toad
+frog_bread,Sapão,Bread Frog
+frog_grof,SapoopaS,FroggorF
+frog_anime,Kawaii Kero,Kawaii Kero
+frog_abstract,Sapo Abstrato,Abstract Frog
+frog_pipa_l,Sapo Pipa,Suriname Toad
+frog_pipa_f,Sapo Pipa Furado,Suriname Toad
+frog_png,sapo.png,frog.png
+frog_icecream,Sapo Sorveteiro,Parlour Frog
