--- a/localization/sapopon - localization - ui.csv
+++ b/localization/sapopon - localization - ui.csv
@@ -1,25 +1,29 @@
 keys,pt,en
-lang_name,Português,
-game_name,Sapopon,
-frogos,FrogOs,
-press_enter,Pressione ENTER para começar,
-log_in,Entrar,
-log_out,Sair,
-credits,Créditos,
-manual,Manual,
-back,Voltar,
-next_day,Prox. Dia,
-day,Dia %s,
-gacha,Sapopon,
-your_coins,Você tem %s moedas,
-got_new_frog,Você conseguiu um novo sapo!,
-collection,Coleção,
-collection_value,A sua coleção vale %s moedas hoje,
-coin,Moedas,
-frog_collection,COLEÇÂO,
-frog_rarity,RARIDADE,
-frog_today_value,PREÇO HOJE,
-market,Mercado,
-today_fluctuation,Valores de mercado hoje,
-sell,Vender,
-frog,Sapo,
+lang_name,Português,English
+game_name,Sapopon,Sapopon: Non-fungible Toads
+frogos,FrogOs,FrogOs
+press_enter,Pressione ENTER para começar,Press ENTER to start
+log_in,Entrar,Log in
+log_out,Sair,Log out
+credits,Créditos,Credits
+manual,Manual,Manual
+back,Voltar,Back
+next_day,Prox. Dia,Next Day
+day,Dia %s,Dia %s
+gacha,Sapopon,Sapopon
+your_coins,Você tem %s moedas,You have %s coins
+got_new_frog,Você conseguiu um novo sapo!,You've got a new frog!
+not_enough_money,Você não tem moedas o suficiente pra isso!,You don't have enough coins to do that!
+collection,Coleção,Collection
+collection_value,A sua coleção vale %s moedas hoje,Your collection is worth %s coins today
+coin,Moedas,Coins
+frog_collection,COLEÇÂO,COLLECTION
+frog_rarity,RARIDADE,RARITY
+frog_today_value,PREÇO HOJE,PRICE TODAY
+market,Mercado,Market
+today_fluctuation,Valores de mercado hoje,Maket values today
+your_collection,Sua coleção de Sapopons,Your Sapopon collection
+to_sell,Sapopons para venda,Sapopons to sell
+can_sell_less_zero,Você não pode vender por menos de 0 moedas!,You can't sell for less than 0 coins!
+sell,Vender,Sell
+frog,Sapo,Frog
