graphical and polishing tweaks and additions

--- a/localization/sapopon - localization - propriedades.csv
+++ b/localization/sapopon - localization - propriedades.csv
@@ -1,11 +1,11 @@
 key,pt,en
-LUCKY,Sortudo,Eudaemonia
-HARD,Difícil Descrever,Ineffable
-STYLISH,Estiloso,Halcyon
-ADVENTURE,Aventura,Odeliac
-MYSTIC,De Natureza Mística,Syzygy
+LUCKY,Eudaemonia,Eudaemonia
+HARD,Inefável,Ineffable
+STYLISH,Halciom,Halcyon
+ADVENTURE,Odelíaco,Odeliac
+MYSTIC,Sizígico,Syzygy
 MATERIALS,Materiais,Materials
 commom,Comum,Common
-incommon,Incomum,Incommon
+incommon,Incomum,Uncommon
 rare,Raro,Rare
-unique,Unico,Unique
+unique,Único,Unique
