--- a/localization/sapopon - localization - sapos.csv
+++ b/localization/sapopon - localization - sapos.csv
@@ -1,37 +1,37 @@
 key,pt,en
-frog_angel,Sapo Bíblico,Biblical Frog
+frog_angel,Sapanjo,Frangel
 frog_demon,Sapánas,Frog Satan
 frog_future,Rãndroid,Toadroid
-frog_medieval,Sapo Medieval,Medieval Frog
+frog_medieval,Sapo Bocudo,Mouthy Frog
 frog_pieta,Pietà,Pietà
-frog_cheese,Sapão de Queijo,Cheese Toad
+frog_cheese,Sapão de Queijo,Cheese Toadst
 frog_jfrog,sapo.jpeg,frog.jpeg
-frog_chad,Chaderson,Chaderson
+frog_chad,Chaderson,Chaderfilho
 frog_hfroger,HFROGGER,HFROGGER
-frog_gnome,Sapo Gnomo,Gnome Frog
-frog_autism,Rãutismo,Autoadsm
+frog_gnome,Sapo de Jardim,Frome
+frog_autism,Rãutismo,Frogtism
 frog_paradox,Sapo Paradoxo,Paradox Frog
-frog_tan,Sapo Bronzeado,Tan Line Frog
+frog_tan,Sapo Banhista,Tan Line Frog
 frog_ladybug,Saponinha,Ladyfrog
 frog_low_poly,Sapo Lowpoly,Lowpoly Frog
 frog_sapone,Al Sapone,Al Sapone
 frog_lips,Sapo Bicudo,Kissing Toad
 frog_vga,Sapo VGA,VGA Frog
-frog_french,Sapoleão Bonaparte,Nopoleon Bonafrog
-frog_war,Sapo Guerreiro,Warrior Frog
-frog_rogue,Sapo Ladino,Rogue Frog
-frog_alien,Sapalien,Toadalien
-frog_space,Sapastronauta,Astronaufrog
-frog_primitive,Neandersapiens,Neanderfrogiens
+frog_french,Sapoleão Bonaparte,Napoleon Bonafrog
+frog_war,Sapo Guerreiro,Battletoad
+frog_rogue,Sapo Ladino,Frogue
+frog_alien,Extra terrestre,Extra terrestrial
+frog_space,Saponauta,Astrotoad
+frog_primitive,Neandersapiens,Neandertoad
 frog_mage,Sapo Mago,Mage Frog
-frog_greek,Sapócrates,Frogrates
-frog_atom,Sapo Atômico,Arom Frog
+frog_greek,Sapócrates,Froakates
+frog_atom,Sapo Atômico,Atom Frog
 frog_sound,Sapo de Som,Boom Toad
-frog_bread,Sapão,Bread Frog
+frog_bread,Sapão,Fread
 frog_grof,SapoopaS,FroggorF
 frog_anime,Kawaii Kero,Kawaii Kero
 frog_abstract,Sapo Abstrato,Abstract Frog
-frog_pipa_l,Sapo Pipa,Suriname Toad
-frog_pipa_f,Sapo Pipa Furado,Suriname Toad
+frog_pipa_l,Sapo Pipa,Surinam Toad
+frog_pipa_f,Sapo Pipa Furado,Surinam Toad
 frog_png,sapo.png,frog.png
 frog_icecream,Sapo Sorveteiro,Parlour Frog
