fixed collection scroll resiting, hanfled too long frog names n fixed some typos

--- a/localization/sapopon - localization - propriedades.csv
+++ b/localization/sapopon - localization - propriedades.csv
@@ -5,7 +5,7 @@ STYLISH,Halciom,Halcyon
 ADVENTURE,Odelíaco,Odeliac
 MYSTIC,Sizígico,Syzygy
 MATERIALS,Materiais,Materials
-COMMON,Comum,Common
-INCOMMON,Incomum,Uncommon
+COMMOM,Comum,Common
+INCOMMOM,Incomum,Uncommon
 RARE,Raro,Rare
 UNIQUE,Único,Unique
