added new frog, new sfx n some values tweaks before v0.2 build

--- a/localization/sapopon - localization - sapos.csv
+++ b/localization/sapopon - localization - sapos.csv
@@ -33,8 +33,10 @@ frog_anime,Kawaii Kero,Kawaii Kero
 frog_abstract,Sapo Abstrato,Abstract Frog
 frog_pipa_l,Sapo Pipa,Surinam Toad
 frog_png,sapo.png,frog.png
-frog_icecream,Sapo Sorveteiro,Parlour Frog
+frog_icecream,Sapo Sorveteiro,Ice Cream Frog
 frog_coins,Bolsinha de Sapo,Frog Coin Purse
+frog_sata,Conector SAPA,SATOad Connector
+frog_joker,Saporinga,Froker
 ,,
 materials_steel_frog,Sapo de Aço,Steel Frog
 materials_alexandrite_frog,Sapo de Alexandrita,Alexandrite Frog
